--- a/elements.html
+++ b/elements.html
@@ -6,6 +6,13 @@
 -->
 <html>
 	<head>
+		<!-- Google Tag Manager -->
+		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+		})(window,document,'script','dataLayer','GTM-N99W3NQC');</script>
+		<!-- End Google Tag Manager -->
 		<title>Elements Reference - Massively by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -495,4 +502,5 @@ print 'It took ' + i + ' iterations to sort the deck.';
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
