Added new dashboard projects to portfolio

--- a/index.html
+++ b/index.html
@@ -170,6 +170,42 @@
 										<li><a href="https://app.powerbi.com/links/bCaEn9K6yQ?ctid=05405960-1dc1-48a2-8c70-4fe6f82b6a1b&pbi_source=linkShare" class="button">View Project</a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										<span class="date"></span>
+										<h2><a href="https://drive.google.com/file/d/1tE6pe321x4L68NMVziDEPeT8l5SZhM5r/view?usp=sharing">Sales Performance Comparison Dashboard<br />
+										</a></h2>
+									</header>
+									<a href="https://drive.google.com/file/d/1tE6pe321x4L68NMVziDEPeT8l5SZhM5r/view?usp=sharing" class="image fit"><img src="images/Sales jpeg.jpg" /></a>
+									<p>Dynamic sales analytics dashboard comparing 2023 vs 2024 performance across multiple dimensions. Delivered actionable insights revealing 30% YoY sales growth and 34% profit increase. Features regional distribution analysis, product-wise sales breakdown across 6 categories, and monthly revenue trend visualization. Designed to identify seasonal patterns and regional opportunities for strategic expansion.</p>
+									<ul class="actions special">
+										<li><a href="https://drive.google.com/file/d/1tE6pe321x4L68NMVziDEPeT8l5SZhM5r/view?usp=sharing" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date"></span>
+										<h2><a href="https://drive.google.com/file/d/1pY4AR8o9sGwfyhlrY8-NgUjOjOCM3D-W/view?usp=sharing">E-Commerce Supply Chain Analytics Dashboard<br />
+										</a></h2>
+									</header>
+									<a href="https://drive.google.com/file/d/1pY4AR8o9sGwfyhlrY8-NgUjOjOCM3D-W/view?usp=sharing" class="image fit"><img src="images/supply-chain.png" /></a>
+									<p>Comprehensive supply chain analytics platform tracking $105M in revenue across multiple product categories and regional divisions. Features real-time monitoring of top-performing products, supplier performance metrics across 9 international vendors, and geographic revenue distribution. Built with advanced data modeling to identify transaction patterns and weekly revenue trends, enabling data-driven inventory and procurement decisions.</p>
+									<ul class="actions special">
+										<li><a href="https://drive.google.com/file/d/1pY4AR8o9sGwfyhlrY8-NgUjOjOCM3D-W/view?usp=sharing" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date"></span>
+										<h2><a href="https://app.powerbi.com/groups/me/reports/c83e8b54-066f-4201-a666-dc704c54b0b8/6fbd81d2932b77919af4?experience=power-bi">Interactive Business Intelligence Dashboard<br />
+										</a></h2>
+									</header>
+									<a href="https://app.powerbi.com/groups/me/reports/c83e8b54-066f-4201-a666-dc704c54b0b8/6fbd81d2932b77919af4?experience=power-bi" class="image fit"><img src="images/BI Jpeg.jfif" /></a>
+									<p>Fully interactive executive dashboard with dynamic filtering capabilities across year, age group, and gender segments. Analyzes $2.12M in sales performance with drill-down functionality across markets (Asia Pacific, Europe, LATAM, USCA, Africa), customer segments, and product hierarchies. Features advanced KPI cards tracking profit margins, discount optimization, and quantity metrics with comparative period analysis for strategic decision-making.</p>
+									<ul class="actions special">
+										<li><a href="https://app.powerbi.com/groups/me/reports/c83e8b54-066f-4201-a666-dc704c54b0b8/6fbd81d2932b77919af4?experience=power-bi" class="button">View Project</a></li>
+									</ul>
+								</article>
 							</section>
 
 						<!-- Footer -->
